--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -2,18 +2,11 @@
   "name": "@scaffold-eth/react-app",
   "version": "1.0.0",
   "homepage": ".",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.3.21",
@@ -21,6 +14,7 @@
     "@arbitrum/sdk": "^2.0.0",
     "@gnosis.pm/safe-apps-sdk": "^7.8.0",
     "@gnosis.pm/safe-apps-web3modal": "^17.0.4",
+    "@lit-protocol/lit-node-client": "^2.1.43",
     "@portis/web3": "^4.0.5",
     "@ramp-network/ramp-instant-sdk": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -56,6 +50,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "searchico": "^1.2.1",
+    "siwe": "^1.1.6",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.10"
   },
@@ -87,10 +82,10 @@
     }
   },
   "scripts": {
-    "build": "react-scripts --openssl-legacy-provider build",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "prestart": "node ./scripts/create_contracts.js",
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "lint": "eslint ./src/**/*.{js,jsx} --ignore-path ./.eslintignore --max-warnings=0",
     "ipfs": "node ./scripts/ipfs.js",
